Add self-hosted connectivity options (Cloudflare/Tailscale/Ngrok), setup wizard, health endpoint, GitHub Actions docker build, and SELF-HOSTING.md
- Add /api/health endpoint for monitoring and Docker health checks
- Add docker-compose overlay files for Cloudflare Tunnel, Tailscale Funnel, and Ngrok
- Add interactive setup wizard (scripts/setup.sh) that generates .env and docker-compose.override.yml
- Add GitHub Actions workflow for multi-arch Docker image builds (amd64 + arm64)
- Add comprehensive self-hosting documentation (docs/SELF-HOSTING.md)
- Merge proxy.ts into middleware.ts to fix Next.js 16 build error
- Update .env.example with connectivity variables
- Update Docker health check to use /api/health

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,16 @@ GOOGLE_ID=
 GOOGLE_SECRET=
 NEXTAUTH_SECRET=
 NEXTAUTH_URL=http://localhost:3000
+
+# Connectivity (cloudflare|tailscale|ngrok|direct)
+CONNECTIVITY_METHOD=direct
+
+# Cloudflare Tunnel
+CLOUDFLARE_TUNNEL_TOKEN=
+
+# Tailscale Funnel
+TAILSCALE_AUTHKEY=
+
+# Ngrok
+NGROK_AUTHTOKEN=
+NGROK_DOMAIN=
