feat: Realtime Messaging v4 — Mercure Hub + Olm-inspired E2E (X25519 DH + Ed25519 + AES-256-GCM)
- Mercure SSE hub integration (replaces custom event bus)
- X25519 Diffie-Hellman key exchange + Ed25519 signatures
- Per-message keys via HKDF
- Conversation model with 72h TTL
- New endpoints: key-exchange, message, messages, close
- crypto.mjs script (keygen/encrypt/decrypt)
- Dashboard realtime updates via useMercure hook
- Unit + integration tests

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,8 @@ TAILSCALE_AUTHKEY=
 # Ngrok
 NGROK_AUTHTOKEN=
 NGROK_DOMAIN=
+
+# Mercure (realtime messaging)
+MERCURE_HUB_URL=http://localhost:3100/.well-known/mercure
+MERCURE_JWT_SECRET=change-me-in-production
+NEXT_PUBLIC_MERCURE_HUB_URL=http://localhost:3100/.well-known/mercure
