security: harden Mercure + message endpoint auth
- Mercure: disable anonymous subscribers, require JWT for all subscriptions
- New endpoint: POST /api/v1/mercure-token — issues scoped subscriber JWTs
- /api/v1/message: require x-api-key, validate caller owns the request,
  enforce role match (provider key → from:provider, client key → from:consumer)
- Production Caddyfile: localhost-only binding, no anonymous, strict CORS
- Docker Compose: secure defaults (no exposed DB/Mercure ports, required secrets)
- Strong JWT secret (64 char hex)
- .env.example: documented all config options
- E2E tests: updated to use JWT-authenticated Mercure subscriptions
- chmod 600 on SQLite DB

--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,39 @@
-GITHUB_ID=
-GITHUB_SECRET=
-GOOGLE_ID=
-GOOGLE_SECRET=
+# HeySummon Platform — Environment Configuration
+# Copy to .env and fill in values
+
+# ─── Required ───────────────────────────────────────────
+# Generate with: openssl rand -hex 32
 NEXTAUTH_SECRET=
+MERCURE_JWT_SECRET=
+
+# ─── Database ───────────────────────────────────────────
+# SQLite (default, for dev/small deployments):
+# DATABASE_URL=file:./prisma/heysummon.db
+#
+# PostgreSQL (recommended for production):
+# DATABASE_URL=postgresql://heysummon:PASSWORD@localhost:5432/heysummon
+#
+# Docker Compose auto-configures PostgreSQL — no DATABASE_URL needed.
+
+# ─── Auth Providers (optional) ──────────────────────────
+AUTH_GITHUB_ID=
+AUTH_GITHUB_SECRET=
+
+# ─── URLs ───────────────────────────────────────────────
 NEXTAUTH_URL=http://localhost:3000
 
-# Connectivity (cloudflare|tailscale|ngrok|direct)
-CONNECTIVITY_METHOD=direct
-
-# Cloudflare Tunnel
-CLOUDFLARE_TUNNEL_TOKEN=
-
-# Tailscale Funnel
-TAILSCALE_AUTHKEY=
-
-# Ngrok
-NGROK_AUTHTOKEN=
-NGROK_DOMAIN=
-
-# Mercure (realtime messaging)
-MERCURE_HUB_URL=http://localhost:3100/.well-known/mercure
-MERCURE_JWT_SECRET=change-me-in-production
+# Public Mercure URL (what browsers/watchers connect to)
+# In Docker: this is the externally accessible URL
 NEXT_PUBLIC_MERCURE_HUB_URL=http://localhost:3100/.well-known/mercure
+
+# Internal Mercure URL (platform → Mercure, inside Docker network)
+# Only change if not using Docker Compose
+MERCURE_HUB_URL=http://localhost:3100/.well-known/mercure
+
+# ─── Mercure Security ──────────────────────────────────
+# Allowed CORS origins for Mercure (comma-separated in some setups)
+MERCURE_CORS_ORIGINS=https://cloud.heysummon.ai
+
+# ─── Docker ─────────────────────────────────────────────
+# DB_PASSWORD=       # PostgreSQL password (default: heysummon_dev)
+# APP_PORT=3000      # Host port for the platform
