--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,8 @@ services:
     restart: unless-stopped
     environment:
       POSTGRES_USER: heysummon
-      POSTGRES_PASSWORD: heysummon_dev
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-heysummon_dev}
       POSTGRES_DB: heysummon
-    ports:
-      - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
@@ -15,66 +13,49 @@ services:
       interval: 5s
       timeout: 3s
       retries: 5
-
-  app:
-    build: .
-    restart: unless-stopped
-    ports:
-      - "3000:3000"
-    depends_on:
-      db:
-        condition: service_healthy
-    environment:
-      DATABASE_URL: postgresql://heysummon:heysummon_dev@db:5432/heysummon
-      NEXTAUTH_URL: http://localhost:3000
-      NEXTAUTH_SECRET: dev-secret-change-me
-      AUTH_GITHUB_ID: ""
-      AUTH_GITHUB_SECRET: ""
-      MERCURE_HUB_URL: http://mercure:3000/.well-known/mercure
-      MERCURE_JWT_SECRET: dev-mercure-secret-change-me
-      NEXT_PUBLIC_MERCURE_HUB_URL: http://localhost:3100/.well-known/mercure
-    healthcheck:
-      test: ["CMD", "wget", "-q", "--spider", "http://localhost:3000/api/health"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
+    # No ports exposed — only accessible via internal network
 
   mercure:
     image: dunglas/mercure
     restart: unless-stopped
     environment:
       SERVER_NAME: ':3000'
-      MERCURE_PUBLISHER_JWT_KEY: 'dev-mercure-secret-change-me'
-      MERCURE_SUBSCRIBER_JWT_KEY: 'dev-mercure-secret-change-me'
+      MERCURE_PUBLISHER_JWT_KEY: ${MERCURE_JWT_SECRET:?Set MERCURE_JWT_SECRET}
+      MERCURE_SUBSCRIBER_JWT_KEY: ${MERCURE_JWT_SECRET}
       MERCURE_EXTRA_DIRECTIVES: |
-        anonymous
-        cors_origins *
-        subscriptions
-    ports:
-      - "3100:3000"
+        cors_origins ${MERCURE_CORS_ORIGINS:-https://cloud.heysummon.ai}
+    healthcheck:
+      test: ["CMD", "wget", "-q", "--spider", "http://localhost:3000/healthz"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+    # No ports exposed — only accessible via internal network
+    # Anonymous subscribers DISABLED by default (no MERCURE_EXTRA_DIRECTIVES: anonymous)
 
-  # All-in-one alternative (Next.js + Mercure in one container)
-  # Uncomment below and comment out 'app' + 'mercure' services above to use
-  # app-allinone:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile.allinone
-  #   restart: unless-stopped
-  #   ports:
-  #     - "3000:3000"
-  #     - "3100:3100"
-  #   depends_on:
-  #     db:
-  #       condition: service_healthy
-  #   environment:
-  #     DATABASE_URL: postgresql://heysummon:heysummon_dev@db:5432/heysummon
-  #     NEXTAUTH_URL: http://localhost:3000
-  #     NEXTAUTH_SECRET: dev-secret-change-me
-  #     AUTH_GITHUB_ID: ""
-  #     AUTH_GITHUB_SECRET: ""
-  #     MERCURE_HUB_URL: http://localhost:3100/.well-known/mercure
-  #     MERCURE_JWT_SECRET: dev-mercure-secret-change-me
-  #     NEXT_PUBLIC_MERCURE_HUB_URL: http://localhost:3100/.well-known/mercure
+  app:
+    build: .
+    restart: unless-stopped
+    ports:
+      - "${APP_PORT:-3000}:3000"
+    depends_on:
+      db:
+        condition: service_healthy
+      mercure:
+        condition: service_healthy
+    environment:
+      DATABASE_URL: postgresql://heysummon:${DB_PASSWORD:-heysummon_dev}@db:5432/heysummon
+      NEXTAUTH_URL: ${NEXTAUTH_URL:-http://localhost:3000}
+      NEXTAUTH_SECRET: ${NEXTAUTH_SECRET:?Set NEXTAUTH_SECRET}
+      AUTH_GITHUB_ID: ${AUTH_GITHUB_ID:-}
+      AUTH_GITHUB_SECRET: ${AUTH_GITHUB_SECRET:-}
+      MERCURE_HUB_URL: http://mercure:3000/.well-known/mercure
+      MERCURE_JWT_SECRET: ${MERCURE_JWT_SECRET}
+      NEXT_PUBLIC_MERCURE_HUB_URL: ${PUBLIC_MERCURE_URL:-http://localhost:3100/.well-known/mercure}
+    healthcheck:
+      test: ["CMD", "wget", "-q", "--spider", "http://localhost:3000/api/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
 volumes:
   pgdata:
