feat: add SUL + Cloud License (open-core model)
- LICENSE.md: Sustainable Use License for core (free for personal/internal use)
- LICENSE_CLOUD.md: HeySummon Cloud License for .cloud. files (proprietary)
- src/lib/edition.ts: feature flag (HEYSUMMON_EDITION=community|cloud)
- Convention: files with .cloud. in name = Cloud License
- README: document Community vs Cloud editions
- Modeled after n8n's open-core approach

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,6 @@ MERCURE_CORS_ORIGINS=https://cloud.heysummon.ai
 # ─── Docker ─────────────────────────────────────────────
 # DB_PASSWORD=       # PostgreSQL password (default: heysummon_dev)
 # APP_PORT=3000      # Host port for the platform
+
+# Edition: "community" (default, self-hosted) or "cloud" (managed, requires cloud license)
+HEYSUMMON_EDITION=community
