chore: update .env.example with OAuth providers and edition flag
- Add GITHUB_ID/SECRET, GOOGLE_ID/SECRET placeholders
- Remove public Mercure URL (Mercure is internal-only now)
- HEYSUMMON_EDITION=community as default

--- a/.env.example
+++ b/.env.example
@@ -16,16 +16,15 @@ MERCURE_JWT_SECRET=
 # Docker Compose auto-configures PostgreSQL — no DATABASE_URL needed.
 
 # ─── Auth Providers (optional) ──────────────────────────
-AUTH_GITHUB_ID=
-AUTH_GITHUB_SECRET=
+GITHUB_ID=
+GITHUB_SECRET=
+GOOGLE_ID=
+GOOGLE_SECRET=
 
 # ─── URLs ───────────────────────────────────────────────
 NEXTAUTH_URL=http://localhost:3000
 
-# Public Mercure URL (what browsers/watchers connect to)
-# In Docker: this is the externally accessible URL
-
-# Internal Mercure URL (platform → Mercure, inside Docker network)
+# Internal Mercure URL (platform → Mercure, never exposed externally)
 # Only change if not using Docker Compose
 MERCURE_HUB_URL=http://localhost:3100/.well-known/mercure
 
