feat: form login + registration (works out of the box)
- Email + password login via Credentials provider (bcrypt hashed)
- Registration endpoint POST /api/auth/register
- Auto-verified accounts (no email confirmation needed for self-hosted)
- Auto-login after registration
- Feature flags via env vars:
  - ENABLE_FORM_LOGIN=true (default, no external services needed)
  - ENABLE_MAGIC_LINK_LOGIN=false (needs LOOPS_API_KEY)
  - ENABLE_GOOGLE_LOGIN=false (needs OAuth credentials)
  - ENABLE_GITHUB_LOGIN=false (needs OAuth credentials)
- Login page dynamically shows available methods via /api/auth/flags
- JWT session strategy (required for Credentials provider)
- Password validation: min 8 chars
- Login/register toggle on same page

--- a/.env.example
+++ b/.env.example
@@ -15,11 +15,22 @@ MERCURE_JWT_SECRET=
 #
 # Docker Compose auto-configures PostgreSQL — no DATABASE_URL needed.
 
-# ─── Auth Providers (optional) ──────────────────────────
+# ─── Auth Methods ───────────────────────────────────────
+# Toggle login methods (form login works out of the box, no external services)
+ENABLE_FORM_LOGIN=true
+ENABLE_MAGIC_LINK_LOGIN=false
+ENABLE_GOOGLE_LOGIN=false
+ENABLE_GITHUB_LOGIN=false
+
+# OAuth credentials (only needed if enabled above)
 GITHUB_ID=
 GITHUB_SECRET=
 GOOGLE_ID=
 GOOGLE_SECRET=
+
+# Magic link (only needed if ENABLE_MAGIC_LINK_LOGIN=true)
+# LOOPS_API_KEY=
+# LOOPS_MAGIC_LINK_ID=
 
 # ─── URLs ───────────────────────────────────────────────
 NEXTAUTH_URL=http://localhost:3000
