fix: remove MIT LICENSE, point to Sustainable Use License
- Deleted old LICENSE (MIT) that GitHub used as primary
- Added license field to package.json pointing to LICENSE.md
- GitHub sidebar should now show custom license

--- a/package.json
+++ b/package.json
@@ -45,5 +45,6 @@
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^4.0.18"
-  }
+  },
+  "license": "SEE LICENSE IN LICENSE.md"
 }
