feat: use SQLite in Docker volume instead of local file
- Update prisma schema to read DATABASE_URL from env (default: file:./dev.db)
- Add docker-entrypoint.sh to run prisma migrate deploy and chmod 600 on startup
- Replace PostgreSQL with SQLite volume in docker-compose.yml
- Add named volume 'appdata' mapped to /app/data/
- Add volume backup/restore instructions in docker-compose.yml
- Update .env.example with DATABASE_URL documentation
- No breaking change for local dev (file:./dev.db still works)

Closes #39

--- a/.env.example
+++ b/.env.example
@@ -7,13 +7,11 @@ NEXTAUTH_SECRET=
 MERCURE_JWT_SECRET=
 
 # ─── Database ───────────────────────────────────────────
-# SQLite (default, for dev/small deployments):
-# DATABASE_URL=file:./prisma/heysummon.db
+# Local development (default — SQLite in prisma directory):
+DATABASE_URL=file:./dev.db
 #
-# PostgreSQL (recommended for production):
-# DATABASE_URL=postgresql://heysummon:PASSWORD@localhost:5432/heysummon
-#
-# Docker Compose auto-configures PostgreSQL — no DATABASE_URL needed.
+# Docker Compose uses: file:/app/data/heysummon.db (set automatically, no change needed)
+# The Docker volume "appdata" persists the database across container restarts.
 
 # ─── Auth Methods ───────────────────────────────────────
 # Toggle login methods (form login works out of the box, no external services)
