--- a/skills/hitlaas-consumer/.env.example
+++ b/skills/hitlaas-consumer/.env.example
@@ -3,3 +3,6 @@ HITLAAS_API_KEY=hs_cli_your_key_here
 HITLAAS_RELAY_URL=http://localhost:3000
 HITLAAS_CALLBACK_URL=http://localhost:8080/callback
 HEYSUMMON_DEVICE_TOKEN=hs_dev_your_device_token_here
+
+# Machine binding: X-Machine-Id is computed at runtime from hostname, OS, arch, and username.
+# This means copying this .env to a different machine won't work — the key is hardware-bound.
