--- a/skills/hitlaas-provider/.env.example
+++ b/skills/hitlaas-provider/.env.example
@@ -2,3 +2,6 @@
 HITLAAS_API_KEY=hs_prov_your_key_here
 HITLAAS_RELAY_URL=http://localhost:3000
 HEYSUMMON_DEVICE_TOKEN=hs_dev_your_device_token_here
+
+# Machine binding: X-Machine-Id is computed at runtime from hostname, OS, arch, and username.
+# This means copying this .env to a different machine won't work — the key is hardware-bound.
