--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/dompurify": "^3.0.5",
+    "@types/jsdom": "^27.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/linkify-it": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
