--- a/.github/workflows/docs-sync.yml
+++ b/.github/workflows/docs-sync.yml
@@ -1,17 +1,7 @@
 name: Docs Sync
 on:
-  push:
-    branches: [main]
-    paths:
-      - 'src/**'
-      - 'docs/**'
-      - 'skills/**'
-      - 'relay/**'
-      - 'DEPLOYMENT.md'
-      - 'CHANGELOG.md'
-      - 'README.md'
-      - 'docker-compose*.yml'
-      - 'infra/**'
+  release:
+    types: [published]
 
 jobs:
   trigger-docs-update:
@@ -19,24 +9,32 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 2
+          fetch-depth: 0
 
-      - name: Get commit info and dispatch
+      - name: Get release info and dispatch
         env:
           DOCS_TOKEN: ${{ secrets.DOCS_SYNC_TOKEN }}
         run: |
-          MESSAGE=$(git log -1 --pretty=%B | head -1)
-          DIFF=$(git diff HEAD~1 --stat)
-          SHA="${{ github.sha }}"
+          VERSION="${{ github.event.release.tag_name }}"
+          BODY="${{ github.event.release.body }}"
+          
+          # Get full diff since previous tag
+          PREV_TAG=$(git tag --sort=-creatordate | sed -n '2p')
+          if [ -n "$PREV_TAG" ]; then
+            DIFF=$(git diff "$PREV_TAG"..HEAD --stat)
+          else
+            DIFF="Initial release"
+          fi
           
           # Build JSON safely with jq
           PAYLOAD=$(jq -n \
-            --arg msg "$MESSAGE" \
+            --arg ver "$VERSION" \
+            --arg body "$BODY" \
             --arg diff "$DIFF" \
-            --arg sha "$SHA" \
-            '{commit_message: $msg, diff: $diff, sha: $sha}')
+            --arg sha "${{ github.sha }}" \
+            '{version: $ver, release_notes: $body, diff: $diff, sha: $sha}')
           
-          # Dispatch via API
+          # Dispatch to docs repo
           curl -s -X POST \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer $DOCS_TOKEN" \
