fix: add DATABASE_URL to CI env, sync ESLint config from main

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,11 @@ jobs:
       - run: npm ci
 
       - run: npx prisma generate
+        env:
+          DATABASE_URL: file:./dev.db
 
       - run: npm run lint
 
       - run: npm run build
+        env:
+          DATABASE_URL: file:./dev.db
