refactor: guard as pre-flight validation (skill-side, not platform-side)
Architecture change:
- Guard is now called BY THE SKILL before submitting to the platform
- Skill gets a signature back, passes it to platform with the request
- Platform verifies HMAC(content + timestamp + nonce) matches signature
- Guard no longer encrypts content (platform handles encryption at rest)
- Removed guard-client.ts (platform no longer calls guard)
- Added REQUIRE_GUARD env var to mandate guard validation
- Replaced guardEncryptedPayload with guardVerified boolean in schema
- Updated consumer request-help.sh with 2-step flow
- Updated .env.example with HEYSUMMON_GUARD_URL

--- a/skills/hitlaas-consumer/.env.example
+++ b/skills/hitlaas-consumer/.env.example
@@ -1,8 +1,10 @@
-# HeySummon Consumer Skill — Environment Configuration
-HITLAAS_API_KEY=hs_cli_your_key_here
-HITLAAS_RELAY_URL=http://localhost:3000
-HITLAAS_CALLBACK_URL=http://localhost:8080/callback
-HEYSUMMON_DEVICE_TOKEN=hs_dev_your_device_token_here
+# HeySummon Consumer Configuration
+HEYSUMMON_API_KEY=hs_cli_your_key_here
+HEYSUMMON_API_URL=http://localhost:3456
 
-# Machine binding: X-Machine-Id is computed at runtime from hostname, OS, arch, and username.
-# This means copying this .env to a different machine won't work — the key is hardware-bound.
+# Optional: Device attestation token (shown once on key creation)
+HEYSUMMON_DEVICE_TOKEN=hs_dev_your_token_here
+
+# Optional: Guard service URL for content validation
+# If set, requests are validated through the guard before submission
+HEYSUMMON_GUARD_URL=http://localhost:3457
