fix: playwright output to /tmp, add test-results to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
-node_modules/
-.next/
-.env.local
-.env
-docker-compose.override.yml
-tailscale-config/state/
 *.db
 *.db-journal
+.env
+.env.local
+.next/
 .vercel
-guard/node_modules/
+docker-compose.override.yml
 guard/dist/
+guard/node_modules/
+node_modules/
+playwright-report/
+tailscale-config/state/
+test-results/
