--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: true
 contact_links:
   - name: Security Vulnerability
-    url: mailto:security@thomasansems.nl
+    url: mailto:security@heysummon.ai
     about: Report security issues privately via email — do not open a public issue.
