--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -55,10 +55,23 @@ jobs:
             sleep 2
           done
 
-      - name: Verify server responds
+      - name: Verify DB and server
         run: |
-          curl -v http://localhost:3456/auth/login 2>&1 | head -30
-          echo "---"
+          echo "=== DB file check ==="
+          ls -la prisma/test.db || echo "DB NOT FOUND at prisma/test.db"
+          ls -la ${{ github.workspace }}/prisma/test.db || echo "DB NOT FOUND at absolute path"
+          echo "=== Query demo user ==="
+          npx prisma db execute --stdin <<< "SELECT id, email, password FROM User WHERE email='demo@heysummon.ai';" 2>&1 || echo "Query failed"
+          echo "=== Try login via curl ==="
+          CSRF=$(curl -s http://localhost:3456/api/auth/csrf | jq -r '.csrfToken')
+          echo "CSRF: $CSRF"
+          COOKIES=$(curl -s -D - http://localhost:3456/api/auth/csrf | grep -i set-cookie | head -2)
+          echo "Cookies: $COOKIES"
+          curl -v -X POST http://localhost:3456/api/auth/callback/credentials \
+            -H "Content-Type: application/x-www-form-urlencoded" \
+            -b "authjs.csrf-token=$(echo $CSRF | cut -d'|' -f1)%7C$(echo $CSRF | cut -d'|' -f2)" \
+            -d "email=demo@heysummon.ai&password=demo1234&csrfToken=$CSRF&json=true" 2>&1 | tail -20
+          echo "=== Server auth/login response ==="
           curl -s -o /dev/null -w "%{http_code}" http://localhost:3456/auth/login
 
       - name: Run Playwright tests
