--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   E2E_MERCURE_JWT_SECRET: e2e-mercure-secret
-  DATABASE_URL: postgresql://heysummon:heysummon_e2e@localhost:15432/heysummon_e2e
+  DATABASE_URL: file:./prisma/e2e-test.db
 
 jobs:
   e2e:
@@ -18,20 +18,6 @@ jobs:
     timeout-minutes: 15
 
     services:
-      postgres:
-        image: postgres:16-alpine
-        env:
-          POSTGRES_USER: heysummon
-          POSTGRES_PASSWORD: heysummon_e2e
-          POSTGRES_DB: heysummon_e2e
-        ports:
-          - 15432:5432
-        options: >-
-          --health-cmd "pg_isready -U heysummon"
-          --health-interval 5s
-          --health-timeout 3s
-          --health-retries 10
-
       mercure:
         image: dunglas/mercure
         env:
