fix: correct Prisma CLI vs runtime DATABASE_URL paths in CI
Prisma CLI resolves file: paths relative to schema dir (prisma/),
while PrismaClient runtime resolves relative to project root.
Use file:./test.db for CLI steps, file:./prisma/test.db for runtime.

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -61,9 +61,13 @@ jobs:
 
       - name: Generate Prisma client
         run: npx prisma generate
+        env:
+          DATABASE_URL: "file:./e2e-test.db"
 
       - name: Run migrations
         run: npx prisma db push --force-reset
+        env:
+          DATABASE_URL: "file:./e2e-test.db"
 
       - name: Seed E2E data
         id: seed
